# oculator

./: LICENSE  README.md  dune-project
lib/: ast.ml  dune  lexer.mll  math.ml  parser.mly
test/: dune
